src/test/c/accept/43-nested-if-else.arcx
if (a == b) {
    if (c == d) {
        x:int=1;
    } else {
        y:int=2;
    }
} 