src/test/c/reject/33-nested-for-missing-in.arcx
for(i in List) {
    for(j List) {
        x:int=1;
    }
} 